# hello_py_11_24

./: .gitignore  README.md  flake.nix  pyproject.toml
hello_py/greeting/: __init__.py  greeting.py
hello_py/netflix_fun/: __init__.py  netflix_fun.py
tests/greeting/: test_greeting.py
